--- a/global.css
+++ b/global.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');*/
 *{
   margin: 0;
   padding: 0;
@@ -9,22 +9,77 @@
 body{
   background: #e9e9f7;
 }
+button{
+  padding: 12px 28px;
+  font-size: 16px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  background: #15d556;
+  color: #fff;
+  box-shadow: 4px 4px #159956;
+}
+button:active {
+  transform: translate(4px,4px);
+  box-shadow: none;
+}
 .sudoku{
   display: flex;
   position: relative;
   width: 100%;
   height: 100vh;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.win-win{
+  display: none;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  background-color: #000c;
+  z-index: 9999;
+}
+.win-card{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 500px;
+  height: 360px;
+  top: 50%;
+  left: 50%;
+  background: #e9e9f7;
+  text-align: center;
+  transform: translate(-50%,-50%);
+  border-radius: 20px;
+  box-shadow: 10px 10px #777;
+}
+.win-card h2{
+  font-size: 54px;
+}
 
+.win-card button{
+  position: absolute;
+  bottom: 30px;
+  align-self: center;
+}
+header{
+  display: flex;
+  position: relative;
+  /*width: 478px;*/
+  height: 60px;
+  margin: 0 0 20px;
+  padding: 10px 30px;
+  gap: 20px;
+  justify-content: flex-start;
+}
 #table-container{
   border-collapse: collapse;
   border: 4px solid #3a5bde;
 }
 
 .box{
-  
   width: 50px;
   height: 50px;
   border: 2px solid #aaa;
@@ -33,12 +88,18 @@ body{
   font-weight: 700;
   cursor: pointer;
   -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none
-  
+}
 
+.box.box-nonEditable{
+  font-weight: 700;
+  background: #c2c2e7;
 }
-.box.enter{
-  font-weight: 400;
+.box.box-editable{
+  font-weight: 500;
+  color: #333;
+  background: transparent;
 }
+
 tr:nth-child(3n){
   border-bottom: 4px solid #3a5bde;
 }
@@ -46,9 +107,22 @@ td:nth-child(3n){
   border-right: 4px solid #3a5bde;
 }
 
-@media(max-width: 500px){
+@media(max-width: 600px){
+  .win-card h2{
+    font-size: 10vw;
+    transform: translateY(-5vw);
+  }
+  .win-card button{
+    bottom: 7vw;
+  }
   .box{
     width: 10vw;
     height: 10vw;
   }
+  .win-card{
+  width: 95vw;
+  height: 66vw;
+  }
 }
+
+
