--- a/global.css
+++ b/global.css
@@ -10,19 +10,22 @@ body{
   background: #e9e9f7;
 }
 button{
-  padding: 12px 28px;
-  font-size: 16px;
+  padding: 12px 24px;
+  font-size: 14px;
   border-radius: 10px;
   outline: none;
   border: none;
   background: #15d556;
   color: #fff;
   box-shadow: 4px 4px #159956;
+  transition: all ease 0.3s;
 }
 button:active {
   transform: translate(4px,4px);
+  transition: all ease 0.3s;
   box-shadow: none;
 }
+
 .sudoku{
   display: flex;
   position: relative;
@@ -34,9 +37,9 @@ button:active {
 }
 .win-win{
   display: none;
+  position: absolute;
   width: 100%;
   height: 100vh;
-  position: absolute;
   background-color: #000c;
   z-index: 9999;
 }
@@ -59,20 +62,42 @@ button:active {
   font-size: 54px;
 }
 
-.win-card button{
+.win-card .newgame{
   position: absolute;
   bottom: 30px;
   align-self: center;
 }
-header{
+.table-header{
   display: flex;
   position: relative;
-  /*width: 478px;*/
-  height: 60px;
-  margin: 0 0 20px;
-  padding: 10px 30px;
+  width: 458px;
+  padding: 20px 0;
   gap: 20px;
   justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.newgame{
+  /*position: relative;*/
+}
+.level-container{
+  display: none;
+  position: absolute;
+  left: 4px;
+  width: 118px;
+  border-top: 2px solid #fff0;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.game-level{
+  width: 100%;
+  padding: 15px 0 15px 20px;
+  background: #15d556;
+  color: #fff;
+  text-align: start;
+}
+.game-level:hover{
+  background: #15c356;
 }
 #table-container{
   border-collapse: collapse;
@@ -83,21 +108,25 @@ header{
   width: 50px;
   height: 50px;
   border: 2px solid #aaa;
+  background: #e9e9f7;
   text-align: center;
   font-size: 20px;
   font-weight: 700;
   cursor: pointer;
+  transition: all ease 0.3s;
   -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none
 }
-
+/*.box:hover{
+  transform: scale(1.1);
+  box-shadow: 1px 1px 5px #555;
+}*/
 .box.box-nonEditable{
   font-weight: 700;
-  background: #c2c2e7;
+  background: #b9b9e7;
 }
 .box.box-editable{
   font-weight: 500;
   color: #333;
-  background: transparent;
 }
 
 tr:nth-child(3n){
@@ -107,6 +136,26 @@ td:nth-child(3n){
   border-right: 4px solid #3a5bde;
 }
 
+
+#numpad{
+  display: flex;
+  width: 458px;
+  margin-top: 15px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.numkey{
+  display: flex;
+  width: 50px;
+  height: 50px;
+  margin: 5px 15px;
+  border: 3px solid #999;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+}
 @media(max-width: 600px){
   .win-card h2{
     font-size: 10vw;
@@ -115,6 +164,9 @@ td:nth-child(3n){
   .win-card button{
     bottom: 7vw;
   }
+  .table-header{
+    width: 91vw;
+  }
   .box{
     width: 10vw;
     height: 10vw;
@@ -122,6 +174,14 @@ td:nth-child(3n){
   .win-card{
   width: 95vw;
   height: 66vw;
+  }
+  #numpad{
+    width: 91vw;
+  }
+  .numkey{
+    width: 12vw;
+    height: 12vw;
+    margin: 5px 3vw;
   }
 }
 
