--- a/global.css
+++ b/global.css
@@ -153,11 +153,20 @@ td:nth-child(3n){
   height: 50px;
   margin: 5px 15px;
   background: transparent;
-  border: 3px solid #999;
+  border: 4px solid #999;
   outline: none;
   border-radius: 10px;
   font-size: 24px;
   cursor: grab;
+}
+.numkey:last-child{
+  color: #fff;
+  background: #d65757;
+  border-color: #822727;
+}
+.numkey:last-child:active{
+  background: #d65757;
+  border-color: #822727;
 }
 .numkey:active{
   background: #ccc;
